--- a/LocaldatabaseTutorial/VocabularyPages/VocabularyPages/Views/CategoriesPage.xaml
+++ b/LocaldatabaseTutorial/VocabularyPages/VocabularyPages/Views/CategoriesPage.xaml
@@ -12,10 +12,16 @@
     </ContentPage.ToolbarItems>
 
     <ContentPage.Content>
-        <RefreshView x:DataType="local:CategoriesViewModel" Command="{Binding LoadItemsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+        <RefreshView x:DataType="local:CategoriesViewModel" 
+                     Command="{Binding LoadItemsCommand}" 
+                     IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
             <CollectionView x:Name="CategoriesListView"
-                        ItemsSource="{Binding Categories}"
-                        SelectionMode="None">
+                            ItemsSource="{Binding Categories}"
+                            SelectionMode="Single" 
+                            SelectionChanged="CategoriesListView_SelectionChanged">
+
+                <!--        SelectionChangedCommand="{Binding SelectionChangedCommand}">-->
+                        
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <StackLayout Padding="10" x:DataType="model:Category">
@@ -31,7 +37,7 @@
                                    LineBreakMode="NoWrap" 
                                    Style="{DynamicResource ListItemDetailTextStyle}"
                                    FontSize="13" />
-                            <!--    <StackLayout.GestureRecognizers>
+                                <!--<StackLayout.GestureRecognizers>
                                     <TapGestureRecognizer 
                                         NumberOfTapsRequired="1"
                                         Command="{Binding Source={RelativeSource AncestorType={x:Type local:ItemsViewModel}}, Path=ItemTapped}"		
