Update category pages

--- a/LocaldatabaseTutorial/VocabularyPages/VocabularyPages/Views/CategoryDetailPage.xaml
+++ b/LocaldatabaseTutorial/VocabularyPages/VocabularyPages/Views/CategoryDetailPage.xaml
@@ -3,14 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="VocabularyPages.Views.CategoryDetailPage"
              xmlns:local="clr-namespace:VocabularyPages.ViewModels"
-             Title="Category details" 
-             BindingContext="local:ItemDetailViewModel">
+             Title="{Binding Category.Name}" >
+
     <ContentPage.Content>
         <StackLayout Margin="20">
             <Label Text="Category"></Label>
             <Label Text="{Binding Category.Name, Mode=TwoWay}" FontSize="Medium" />
             <Label Text="Last use"/>
-            <Label Text="{Binding Category.LastUse, StringFormat='{0:dd/MM/yyyy}'}"/>
+            <Label Text="{Binding Category.LastUse}"/>
             <CollectionView ItemsSource="{Binding Category.Words}">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
